--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-		System.import('src/main.js');
+		System.import('main');
 	</script>
 </body>
 </html>
