cleaning up customizations

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 	<p id='content'></p>
 	<script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
-    <script>
-		System.import('main');
-	</script>
+    <script src="start.js"></script>
 </body>
 </html>
