--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-	<p id='content'></p>
+	<p id="content"></p>
 	<script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script src="start.js"></script>
