--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <body>
 	<p id="content"></p>
 	<script src="jspm_packages/system.js"></script>
-    <script src="config.js"></script>
-    <script src="start.js"></script>
+  <script src="config.js"></script>
+  <script>
+    System.import('main');
+  </script>
 </body>
 </html>
